[Devansh/Yash/Akshay] #235687 Fix for tooltip not visible on focus

--- a/src/stylesheets/_buttons.scss
+++ b/src/stylesheets/_buttons.scss
@@ -49,9 +49,20 @@
 
     &__flamingo-btn {
       background-color: $flamingo-s40;
+      color: $white;
+
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 220px;
+      height: 48px;
+
+      border: none;
+      font-size: 20px;
 
       &:hover {
-        background-color: $link-hover;
+        color: $white;
       }
     }
   }
